# gitlab_async_registry_cleaner

./: .env  .gitignore  README.md  pyproject.toml  registry_config.json
gitlab_registry_async_cleaner/: __init__.py  main.py  tag_handler.py
gitlab_registry_async_cleaner/api_requests/: __init__.py  requests.py
gitlab_registry_async_cleaner/cli/: __init__.py  cli.py
gitlab_registry_async_cleaner/config_reader/: __init__.py  config_reader.py
gitlab_registry_async_cleaner/gitlab/: __init__.py  api_urls.py  image_registry_process.py
gitlab_registry_async_cleaner/logger/: __init__.py  logger.py
